--- a/css/style.css
+++ b/css/style.css
@@ -289,7 +289,7 @@ table,td,th{
     border-radius: 50%;
     background: #0D1B3D;
     text-align: center;
-    position: absolute;
+    position: fixed;
     right: 20px;
     top: 20px;
     cursor: pointer;
@@ -301,7 +301,16 @@ table,td,th{
     position: relative;
     padding-top: 56.25%;
 }
-
+.video-demo{
+    max-width: 500px;
+    width: 100%;
+    border: 5px solid ·3c5n6e;
+}
+.video-demo-contenedor{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 80px;
+}
 .video-responsive-src{
     position: absolute;
     left: 0;
@@ -347,6 +356,9 @@ table,td,th{
     }
     textarea{
         width: 80%;
+    }
+    video-demo-contenedor{
+        margin-bottom: 30px;
     }
 }
 
@@ -467,6 +479,15 @@ table,td,th{
 
 @media screen and (max-width:582px){
     /* portada */
+    .portada .button{
+        display: block;
+    }
+    .formulario .col-2{
+        align-items: stretch;
+    }
+    .precios .header .logo{
+        margin: 50px 0;
+    }
     .portada .contenedor{
         position: static;
     }
@@ -481,7 +502,7 @@ table,td,th{
     }
     .navbar{
         background-color: rgba(254, 57, 78, .8);
-        position: absolute;
+        position: fixed;
         left: 100%;
         top: 0;
         bottom: 0;
@@ -525,6 +546,9 @@ table,td,th{
     }
     .title-b{
         font-size: 35px;
+    }
+    .video-demo-contenedor{
+        margin: 0 10px 30px 10px;
     }
     /* habitaciones */
     
